src/compilador.output
Terminals unused in grammar

   T_TYPE
   T_GOTO


Grammar

    0 $accept: programa $end

    1 programa: PROGRAM ident ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    2 bloco: parte_declara_rotulos parte_declara_vars comando_composto

    3 parte_declara_rotulos: T_LABEL lista_rotulos PONTO_E_VIRGULA
    4                      | %empty

    5 lista_rotulos: lista_rotulos VIRGULA T_NUMERO
    6              | T_NUMERO

    7 parte_declara_vars: VAR declara_var
    8                   | %empty

    9 declara_var: lista_id_var DOIS_PONTOS ident PONTO_E_VIRGULA

   10 lista_id_var: lista_id_var VIRGULA ident
   11             | ident

   12 lista_idents: lista_idents VIRGULA ident
   13             | ident

   14 expressao: expressao T_MENOR expressaoSimples
   15          | expressao T_MENOR_IGUAL expressaoSimples
   16          | expressao T_MAIOR expressaoSimples
   17          | expressao T_MAIOR_IGUAL expressaoSimples
   18          | expressao T_IGUAL expressaoSimples
   19          | expressao T_DIFERENTE expressaoSimples
   20          | expressaoSimples

   21 expressaoSimples: expressaoSimples T_SUM termo
   22                 | expressaoSimples T_MINUS termo
   23                 | expressaoSimples T_OR termo
   24                 | termo

   25 termo: termo T_MULT terminal
   26      | termo T_DIV terminal
   27      | termo T_AND terminal
   28      | terminal

   29 terminal: ident
   30         | ABRE_PARENTESES expressao FECHA_PARENTESES
   31         | T_NOT terminal
   32         | T_NUMERO

   33 comando_repetitivo: T_WHILE expressao T_DO comando_composto

   34 comando_condicional: T_IF expressao T_THEN comando_composto cond_else

   35 cond_else: T_ELSE comando_composto
   36          | %empty

   37 atribuicaoInteiro: ident ATRIBUICAO numero

   38 imprime: T_WRITE ABRE_PARENTESES ident FECHA_PARENTESES
   39        | T_WRITE ABRE_PARENTESES numero FECHA_PARENTESES

   40 le: T_READ ABRE_PARENTESES lista_leitura FECHA_PARENTESES

   41 lista_leitura: lista_leitura VIRGULA ident
   42              | ident

   43 comando_composto: T_BEGIN comandos T_END

   44 comandos: comandos comando PONTO_E_VIRGULA
   45         | comando PONTO_E_VIRGULA

   46 comando: comando_repetitivo
   47        | comando_condicional
   48        | atribuicaoInteiro
   49        | imprime
   50        | le

   51 ident: T_IDENT

   52 numero: T_NUMERO


Terminals, with rules where they appear

$end (0) 0
error (256)
PROGRAM (258) 1
ABRE_PARENTESES (259) 1 30 38 39 40
FECHA_PARENTESES (260) 1 30 38 39 40
VIRGULA (261) 5 10 12 41
PONTO_E_VIRGULA (262) 1 3 9 44 45
DOIS_PONTOS (263) 9
PONTO (264) 1
T_BEGIN (265) 43
T_END (266) 43
VAR (267) 7
ATRIBUICAO (268) 37
T_IF (269) 34
T_LABEL (270) 3
T_TYPE (271)
T_GOTO (272)
T_THEN (273) 34
T_ELSE (274) 35
T_WHILE (275) 33
T_DO (276) 33
T_OR (277) 23
T_AND (278) 27
T_DIV (279) 26
T_NOT (280) 31
T_SUM (281) 21
T_MINUS (282) 22
T_MULT (283) 25
T_MENOR (284) 14
T_MENOR_IGUAL (285) 15
T_MAIOR (286) 16
T_MAIOR_IGUAL (287) 17
T_IGUAL (288) 18
T_DIFERENTE (289) 19
T_WRITE (290) 38 39
T_READ (291) 40
T_IDENT (292) 51
T_NUMERO (293) 5 6 32 52
IFX (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
programa (41)
    on left: 1, on right: 0
bloco (42)
    on left: 2, on right: 1
parte_declara_rotulos (43)
    on left: 3 4, on right: 2
lista_rotulos (44)
    on left: 5 6, on right: 3 5
parte_declara_vars (45)
    on left: 7 8, on right: 2
declara_var (46)
    on left: 9, on right: 7
lista_id_var (47)
    on left: 10 11, on right: 9 10
lista_idents (48)
    on left: 12 13, on right: 1 12
expressao (49)
    on left: 14 15 16 17 18 19 20, on right: 14 15 16 17 18 19 30 33
    34
expressaoSimples (50)
    on left: 21 22 23 24, on right: 14 15 16 17 18 19 20 21 22 23
termo (51)
    on left: 25 26 27 28, on right: 21 22 23 24 25 26 27
terminal (52)
    on left: 29 30 31 32, on right: 25 26 27 28 31
comando_repetitivo (53)
    on left: 33, on right: 46
comando_condicional (54)
    on left: 34, on right: 47
cond_else (55)
    on left: 35 36, on right: 34
atribuicaoInteiro (56)
    on left: 37, on right: 48
imprime (57)
    on left: 38 39, on right: 49
le (58)
    on left: 40, on right: 50
lista_leitura (59)
    on left: 41 42, on right: 40 41
comando_composto (60)
    on left: 43, on right: 2 33 34 35
comandos (61)
    on left: 44 45, on right: 43 44
comando (62)
    on left: 46 47 48 49 50, on right: 44 45
ident (63)
    on left: 51, on right: 1 9 10 11 12 13 29 37 38 41 42
numero (64)
    on left: 52, on right: 37 39


State 0

    0 $accept: . programa $end

    PROGRAM  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: PROGRAM . ident ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    T_IDENT  shift, and go to state 3

    ident  go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

   51 ident: T_IDENT .

    $default  reduce using rule 51 (ident)


State 4

    1 programa: PROGRAM ident . ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    1 programa: PROGRAM ident ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    T_IDENT  shift, and go to state 3

    lista_idents  go to state 7
    ident         go to state 8


State 7

    1 programa: PROGRAM ident ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   12 lista_idents: lista_idents . VIRGULA ident

    FECHA_PARENTESES  shift, and go to state 9
    VIRGULA           shift, and go to state 10


State 8

   13 lista_idents: ident .

    $default  reduce using rule 13 (lista_idents)


State 9

    1 programa: PROGRAM ident ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 11


State 10

   12 lista_idents: lista_idents VIRGULA . ident

    T_IDENT  shift, and go to state 3

    ident  go to state 12


State 11

    1 programa: PROGRAM ident ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    T_LABEL  shift, and go to state 13

    $default  reduce using rule 4 (parte_declara_rotulos)

    bloco                  go to state 14
    parte_declara_rotulos  go to state 15


State 12

   12 lista_idents: lista_idents VIRGULA ident .

    $default  reduce using rule 12 (lista_idents)


State 13

    3 parte_declara_rotulos: T_LABEL . lista_rotulos PONTO_E_VIRGULA

    T_NUMERO  shift, and go to state 16

    lista_rotulos  go to state 17


State 14

    1 programa: PROGRAM ident ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  shift, and go to state 18


State 15

    2 bloco: parte_declara_rotulos . parte_declara_vars comando_composto

    VAR  shift, and go to state 19

    $default  reduce using rule 8 (parte_declara_vars)

    parte_declara_vars  go to state 20


State 16

    6 lista_rotulos: T_NUMERO .

    $default  reduce using rule 6 (lista_rotulos)


State 17

    3 parte_declara_rotulos: T_LABEL lista_rotulos . PONTO_E_VIRGULA
    5 lista_rotulos: lista_rotulos . VIRGULA T_NUMERO

    VIRGULA          shift, and go to state 21
    PONTO_E_VIRGULA  shift, and go to state 22


State 18

    1 programa: PROGRAM ident ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $default  reduce using rule 1 (programa)


State 19

    7 parte_declara_vars: VAR . declara_var

    T_IDENT  shift, and go to state 3

    declara_var   go to state 23
    lista_id_var  go to state 24
    ident         go to state 25


State 20

    2 bloco: parte_declara_rotulos parte_declara_vars . comando_composto

    T_BEGIN  shift, and go to state 26

    comando_composto  go to state 27


State 21

    5 lista_rotulos: lista_rotulos VIRGULA . T_NUMERO

    T_NUMERO  shift, and go to state 28


State 22

    3 parte_declara_rotulos: T_LABEL lista_rotulos PONTO_E_VIRGULA .

    $default  reduce using rule 3 (parte_declara_rotulos)


State 23

    7 parte_declara_vars: VAR declara_var .

    $default  reduce using rule 7 (parte_declara_vars)


State 24

    9 declara_var: lista_id_var . DOIS_PONTOS ident PONTO_E_VIRGULA
   10 lista_id_var: lista_id_var . VIRGULA ident

    VIRGULA      shift, and go to state 29
    DOIS_PONTOS  shift, and go to state 30


State 25

   11 lista_id_var: ident .

    $default  reduce using rule 11 (lista_id_var)


State 26

   43 comando_composto: T_BEGIN . comandos T_END

    T_IF     shift, and go to state 31
    T_WHILE  shift, and go to state 32
    T_WRITE  shift, and go to state 33
    T_READ   shift, and go to state 34
    T_IDENT  shift, and go to state 3

    comando_repetitivo   go to state 35
    comando_condicional  go to state 36
    atribuicaoInteiro    go to state 37
    imprime              go to state 38
    le                   go to state 39
    comandos             go to state 40
    comando              go to state 41
    ident                go to state 42


State 27

    2 bloco: parte_declara_rotulos parte_declara_vars comando_composto .

    $default  reduce using rule 2 (bloco)


State 28

    5 lista_rotulos: lista_rotulos VIRGULA T_NUMERO .

    $default  reduce using rule 5 (lista_rotulos)


State 29

   10 lista_id_var: lista_id_var VIRGULA . ident

    T_IDENT  shift, and go to state 3

    ident  go to state 43


State 30

    9 declara_var: lista_id_var DOIS_PONTOS . ident PONTO_E_VIRGULA

    T_IDENT  shift, and go to state 3

    ident  go to state 44


State 31

   34 comando_condicional: T_IF . expressao T_THEN comando_composto cond_else

    ABRE_PARENTESES  shift, and go to state 45
    T_NOT            shift, and go to state 46
    T_IDENT          shift, and go to state 3
    T_NUMERO         shift, and go to state 47

    expressao         go to state 48
    expressaoSimples  go to state 49
    termo             go to state 50
    terminal          go to state 51
    ident             go to state 52


State 32

   33 comando_repetitivo: T_WHILE . expressao T_DO comando_composto

    ABRE_PARENTESES  shift, and go to state 45
    T_NOT            shift, and go to state 46
    T_IDENT          shift, and go to state 3
    T_NUMERO         shift, and go to state 47

    expressao         go to state 53
    expressaoSimples  go to state 49
    termo             go to state 50
    terminal          go to state 51
    ident             go to state 52


State 33

   38 imprime: T_WRITE . ABRE_PARENTESES ident FECHA_PARENTESES
   39        | T_WRITE . ABRE_PARENTESES numero FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 54


State 34

   40 le: T_READ . ABRE_PARENTESES lista_leitura FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 55


State 35

   46 comando: comando_repetitivo .

    $default  reduce using rule 46 (comando)


State 36

   47 comando: comando_condicional .

    $default  reduce using rule 47 (comando)


State 37

   48 comando: atribuicaoInteiro .

    $default  reduce using rule 48 (comando)


State 38

   49 comando: imprime .

    $default  reduce using rule 49 (comando)


State 39

   50 comando: le .

    $default  reduce using rule 50 (comando)


State 40

   43 comando_composto: T_BEGIN comandos . T_END
   44 comandos: comandos . comando PONTO_E_VIRGULA

    T_END    shift, and go to state 56
    T_IF     shift, and go to state 31
    T_WHILE  shift, and go to state 32
    T_WRITE  shift, and go to state 33
    T_READ   shift, and go to state 34
    T_IDENT  shift, and go to state 3

    comando_repetitivo   go to state 35
    comando_condicional  go to state 36
    atribuicaoInteiro    go to state 37
    imprime              go to state 38
    le                   go to state 39
    comando              go to state 57
    ident                go to state 42


State 41

   45 comandos: comando . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 58


State 42

   37 atribuicaoInteiro: ident . ATRIBUICAO numero

    ATRIBUICAO  shift, and go to state 59


State 43

   10 lista_id_var: lista_id_var VIRGULA ident .

    $default  reduce using rule 10 (lista_id_var)


State 44

    9 declara_var: lista_id_var DOIS_PONTOS ident . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 60


State 45

   30 terminal: ABRE_PARENTESES . expressao FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 45
    T_NOT            shift, and go to state 46
    T_IDENT          shift, and go to state 3
    T_NUMERO         shift, and go to state 47

    expressao         go to state 61
    expressaoSimples  go to state 49
    termo             go to state 50
    terminal          go to state 51
    ident             go to state 52


State 46

   31 terminal: T_NOT . terminal

    ABRE_PARENTESES  shift, and go to state 45
    T_NOT            shift, and go to state 46
    T_IDENT          shift, and go to state 3
    T_NUMERO         shift, and go to state 47

    terminal  go to state 62
    ident     go to state 52


State 47

   32 terminal: T_NUMERO .

    $default  reduce using rule 32 (terminal)


State 48

   14 expressao: expressao . T_MENOR expressaoSimples
   15          | expressao . T_MENOR_IGUAL expressaoSimples
   16          | expressao . T_MAIOR expressaoSimples
   17          | expressao . T_MAIOR_IGUAL expressaoSimples
   18          | expressao . T_IGUAL expressaoSimples
   19          | expressao . T_DIFERENTE expressaoSimples
   34 comando_condicional: T_IF expressao . T_THEN comando_composto cond_else

    T_THEN         shift, and go to state 63
    T_MENOR        shift, and go to state 64
    T_MENOR_IGUAL  shift, and go to state 65
    T_MAIOR        shift, and go to state 66
    T_MAIOR_IGUAL  shift, and go to state 67
    T_IGUAL        shift, and go to state 68
    T_DIFERENTE    shift, and go to state 69


State 49

   20 expressao: expressaoSimples .
   21 expressaoSimples: expressaoSimples . T_SUM termo
   22                 | expressaoSimples . T_MINUS termo
   23                 | expressaoSimples . T_OR termo

    T_OR     shift, and go to state 70
    T_SUM    shift, and go to state 71
    T_MINUS  shift, and go to state 72

    $default  reduce using rule 20 (expressao)


State 50

   24 expressaoSimples: termo .
   25 termo: termo . T_MULT terminal
   26      | termo . T_DIV terminal
   27      | termo . T_AND terminal

    T_AND   shift, and go to state 73
    T_DIV   shift, and go to state 74
    T_MULT  shift, and go to state 75

    $default  reduce using rule 24 (expressaoSimples)


State 51

   28 termo: terminal .

    $default  reduce using rule 28 (termo)


State 52

   29 terminal: ident .

    $default  reduce using rule 29 (terminal)


State 53

   14 expressao: expressao . T_MENOR expressaoSimples
   15          | expressao . T_MENOR_IGUAL expressaoSimples
   16          | expressao . T_MAIOR expressaoSimples
   17          | expressao . T_MAIOR_IGUAL expressaoSimples
   18          | expressao . T_IGUAL expressaoSimples
   19          | expressao . T_DIFERENTE expressaoSimples
   33 comando_repetitivo: T_WHILE expressao . T_DO comando_composto

    T_DO           shift, and go to state 76
    T_MENOR        shift, and go to state 64
    T_MENOR_IGUAL  shift, and go to state 65
    T_MAIOR        shift, and go to state 66
    T_MAIOR_IGUAL  shift, and go to state 67
    T_IGUAL        shift, and go to state 68
    T_DIFERENTE    shift, and go to state 69


State 54

   38 imprime: T_WRITE ABRE_PARENTESES . ident FECHA_PARENTESES
   39        | T_WRITE ABRE_PARENTESES . numero FECHA_PARENTESES

    T_IDENT   shift, and go to state 3
    T_NUMERO  shift, and go to state 77

    ident   go to state 78
    numero  go to state 79


State 55

   40 le: T_READ ABRE_PARENTESES . lista_leitura FECHA_PARENTESES

    T_IDENT  shift, and go to state 3

    lista_leitura  go to state 80
    ident          go to state 81


State 56

   43 comando_composto: T_BEGIN comandos T_END .

    $default  reduce using rule 43 (comando_composto)


State 57

   44 comandos: comandos comando . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 82


State 58

   45 comandos: comando PONTO_E_VIRGULA .

    $default  reduce using rule 45 (comandos)


State 59

   37 atribuicaoInteiro: ident ATRIBUICAO . numero

    T_NUMERO  shift, and go to state 77

    numero  go to state 83


State 60

    9 declara_var: lista_id_var DOIS_PONTOS ident PONTO_E_VIRGULA .

    $default  reduce using rule 9 (declara_var)


State 61

   14 expressao: expressao . T_MENOR expressaoSimples
   15          | expressao . T_MENOR_IGUAL expressaoSimples
   16          | expressao . T_MAIOR expressaoSimples
   17          | expressao . T_MAIOR_IGUAL expressaoSimples
   18          | expressao . T_IGUAL expressaoSimples
   19          | expressao . T_DIFERENTE expressaoSimples
   30 terminal: ABRE_PARENTESES expressao . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 84
    T_MENOR           shift, and go to state 64
    T_MENOR_IGUAL     shift, and go to state 65
    T_MAIOR           shift, and go to state 66
    T_MAIOR_IGUAL     shift, and go to state 67
    T_IGUAL           shift, and go to state 68
    T_DIFERENTE       shift, and go to state 69


State 62

   31 terminal: T_NOT terminal .

    $default  reduce using rule 31 (terminal)


State 63

   34 comando_condicional: T_IF expressao T_THEN . comando_composto cond_else

    T_BEGIN  shift, and go to state 26

    comando_composto  go to state 85


State 64

   14 expressao: expressao T_MENOR . expressaoSimples

    ABRE_PARENTESES  shift, and go to state 45
    T_NOT            shift, and go to state 46
    T_IDENT          shift, and go to state 3
    T_NUMERO         shift, and go to state 47

    expressaoSimples  go to state 86
    termo             go to state 50
    terminal          go to state 51
    ident             go to state 52


State 65

   15 expressao: expressao T_MENOR_IGUAL . expressaoSimples

    ABRE_PARENTESES  shift, and go to state 45
    T_NOT            shift, and go to state 46
    T_IDENT          shift, and go to state 3
    T_NUMERO         shift, and go to state 47

    expressaoSimples  go to state 87
    termo             go to state 50
    terminal          go to state 51
    ident             go to state 52


State 66

   16 expressao: expressao T_MAIOR . expressaoSimples

    ABRE_PARENTESES  shift, and go to state 45
    T_NOT            shift, and go to state 46
    T_IDENT          shift, and go to state 3
    T_NUMERO         shift, and go to state 47

    expressaoSimples  go to state 88
    termo             go to state 50
    terminal          go to state 51
    ident             go to state 52


State 67

   17 expressao: expressao T_MAIOR_IGUAL . expressaoSimples

    ABRE_PARENTESES  shift, and go to state 45
    T_NOT            shift, and go to state 46
    T_IDENT          shift, and go to state 3
    T_NUMERO         shift, and go to state 47

    expressaoSimples  go to state 89
    termo             go to state 50
    terminal          go to state 51
    ident             go to state 52


State 68

   18 expressao: expressao T_IGUAL . expressaoSimples

    ABRE_PARENTESES  shift, and go to state 45
    T_NOT            shift, and go to state 46
    T_IDENT          shift, and go to state 3
    T_NUMERO         shift, and go to state 47

    expressaoSimples  go to state 90
    termo             go to state 50
    terminal          go to state 51
    ident             go to state 52


State 69

   19 expressao: expressao T_DIFERENTE . expressaoSimples

    ABRE_PARENTESES  shift, and go to state 45
    T_NOT            shift, and go to state 46
    T_IDENT          shift, and go to state 3
    T_NUMERO         shift, and go to state 47

    expressaoSimples  go to state 91
    termo             go to state 50
    terminal          go to state 51
    ident             go to state 52


State 70

   23 expressaoSimples: expressaoSimples T_OR . termo

    ABRE_PARENTESES  shift, and go to state 45
    T_NOT            shift, and go to state 46
    T_IDENT          shift, and go to state 3
    T_NUMERO         shift, and go to state 47

    termo     go to state 92
    terminal  go to state 51
    ident     go to state 52


State 71

   21 expressaoSimples: expressaoSimples T_SUM . termo

    ABRE_PARENTESES  shift, and go to state 45
    T_NOT            shift, and go to state 46
    T_IDENT          shift, and go to state 3
    T_NUMERO         shift, and go to state 47

    termo     go to state 93
    terminal  go to state 51
    ident     go to state 52


State 72

   22 expressaoSimples: expressaoSimples T_MINUS . termo

    ABRE_PARENTESES  shift, and go to state 45
    T_NOT            shift, and go to state 46
    T_IDENT          shift, and go to state 3
    T_NUMERO         shift, and go to state 47

    termo     go to state 94
    terminal  go to state 51
    ident     go to state 52


State 73

   27 termo: termo T_AND . terminal

    ABRE_PARENTESES  shift, and go to state 45
    T_NOT            shift, and go to state 46
    T_IDENT          shift, and go to state 3
    T_NUMERO         shift, and go to state 47

    terminal  go to state 95
    ident     go to state 52


State 74

   26 termo: termo T_DIV . terminal

    ABRE_PARENTESES  shift, and go to state 45
    T_NOT            shift, and go to state 46
    T_IDENT          shift, and go to state 3
    T_NUMERO         shift, and go to state 47

    terminal  go to state 96
    ident     go to state 52


State 75

   25 termo: termo T_MULT . terminal

    ABRE_PARENTESES  shift, and go to state 45
    T_NOT            shift, and go to state 46
    T_IDENT          shift, and go to state 3
    T_NUMERO         shift, and go to state 47

    terminal  go to state 97
    ident     go to state 52


State 76

   33 comando_repetitivo: T_WHILE expressao T_DO . comando_composto

    T_BEGIN  shift, and go to state 26

    comando_composto  go to state 98


State 77

   52 numero: T_NUMERO .

    $default  reduce using rule 52 (numero)


State 78

   38 imprime: T_WRITE ABRE_PARENTESES ident . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 99


State 79

   39 imprime: T_WRITE ABRE_PARENTESES numero . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 100


State 80

   40 le: T_READ ABRE_PARENTESES lista_leitura . FECHA_PARENTESES
   41 lista_leitura: lista_leitura . VIRGULA ident
